--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
     </div>
 
     <div class="bottom">
+        <div class="circle"></div>
+        <div class="vektor"></div>
         <div class="footbar">
             <ul>
                 <li><a href="">HOME</a></li>
